# Change Log
The format is based on [Keep a Changelog](http://keepachangelog.com/)

## [Unreleased]

## [v0.3.2] - Thu, 01 Jun 2017 16:35:29 +0900
### Changed
- staff 계정은 기간제한 없이 봉사활동을 신청할 수 있도록 함

v0.3.1    Wed, 19 Apr 2017 17:55:52 +0900
  - 신청서에 복수신청에 관한 안내 추가 (#51)
  - 18:00 이후에는 익일 신청을 할 수 없도록 함 (#88)
  - intro 의 좌우 swap (#82)

v0.3.0    Thu, 13 Apr 2017 11:53:26 +0900
  - 한번에 여러날을 신청할 수 있도록 함 (#51)

v0.2.20   Wed, 22 Mar 2017 12:32:29 +0900
  - 요일/시간대별로 인원수를 제한할 수 있는 기능 추가 (#85)

v0.2.19   Wed, 22 Mar 2017 10:58:39 +0900
  - 소개화면 내용 변경 (#82)

v0.2.18   Thu, 09 Mar 2017 12:30:48 +0900
  - 소개화면 내용 변경 (#82)

v0.2.17   Wed, 08 Mar 2017 14:01:52 +0900
  - footer 를 추가
  - 소개화면 내용 변경 (#82)

v0.2.16   Tue, 07 Mar 2017 12:02:31 +0900
  - 봉사활동 소개 화면을 변경 (#82)

v0.2.15   Mon, 13 Feb 2017 11:22:44 +0900
  - 1365 소속센터를 입력받지 않음 (#80)

v0.2.14   Fri, 20 Jan 2017 15:42:53 +0900
  - 대문사진변경 (#70)

v0.2.13   Mon, 09 Jan 2017 17:36:52 +0900
  - sms 발신번호 변경
  - extra-holidays.ini 의존성을 제거하고 환경변수로 관리

v0.2.12   Wed, 21 Dec 2016 16:55:21 +0900
  - sms 에 포함된 전화번호 변경 (#79)

v0.2.11   Fri, 09 Dec 2016 14:52:00 +0900
  - 다음해의 휴일목록까지 고려함 (#78)

v0.2.10   Tue, 29 Nov 2016 15:46:00 +0900
  - 구글 캘린더 이벤트 등록 오류 수정 (#77)

v0.2.9    Fri, 25 Nov 2016 12:51:29 +0900
  - intro 이미지 변경 (#70)
  - 1365 소속센터 입력란 추가 (#76)
  - 소개이미지의 자동 크기조정

v0.2.8    Thu, 17 Nov 2016 14:40:41 +0900
  - 자원봉사자에게 보내는 문자 메시지에 변경된 사무실 위치를 반영 (#72)

v0.2.7    Fri, 04 Nov 2016 13:43:55 +0900
  - intro 이미지 변경 (#70)

v0.2.6    Fri, 28 Oct 2016 17:17:10 +0900
  - 1365와 관련된 SMS 및 내용을 삭제 (#68)
  - 봉사활동 신청 가능 기간을 +1d ~ +1m 으로 제한 (#65)
  - 17세이상 고등학생부터 봉사신청이 가능하도록 변경 (#66)

v0.2.5    Wed, 19 Oct 2016 15:33:16 +0900
  - 신청일을 +1d ~ +3m 으로 제한 (#65)

v0.2.4    Wed, 28 Sep 2016 10:36:36 +0900
  - 1365 안내 문구 추가

v0.2.3    Mon, 26 Sep 2016 17:53:20 +0900
  - Fix 일요일도 봉사신청을 할 수 있도록 함 (#61)

v0.2.2    Thu, 22 Sep 2016 13:32:12 +0900
  - 일요일도 봉사신청을 할 수 있도록 함 (#61)

v0.2.1    Fri, 09 Sep 2016 11:44:08 +0900
  - 추석연휴일(09-17)에 봉사활동을 신청할 수 없도록 함
