@@ -69,8 +69,6 @@ sub _public_routes {
     $work->get('/cancel')->to('work#cancel')->name('work.cancel');
     $work->get('/edit')->to('work#edit')->name('work.edit');
     $work->post('/')->to('work#update')->name('work.update');
-    $work->options('/status')->to('work#preflight_cors');
-    $work->options('/1365')->to('work#preflight_cors');
     $work->put('/status')->to('work#update_status');
     $work->put('/1365')->to('work#update_1365');
     $work->get('/guestbook')->to('work#add_guestbook')->name('work.guestbook');
